[package]
name = "jiffy_two_timer"
version = "2.2.5"
authors = ["dfhoughton <dfhoughton@gmail.com>", "Berkus Decker <berkus+cargo@metta.systems>"]
description="parser for English time expressions"
homepage="https://github.com/berkus/jiffy-two-timer"
repository="https://github.com/berkus/jiffy-two-timer"
documentation = "https://docs.rs/jiffy_two_timer"
keywords=["time", "nlp", "parse"]
categories=["date-and-time", "parsing"]
license="MIT"
edition = "2021"

[dependencies]
pidgin = "0.4.4"
lazy_static = "1.4"
jiff = "0.1"
regex = "1.7"
serde_json = "1"

[features]
small_grammar = []
